--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -69,7 +69,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: [lint, type-check, test]
+    needs: [lint, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
