--- a/.github/workflows/pipelines.yml
+++ b/.github/workflows/pipelines.yml
@@ -59,7 +59,7 @@ jobs:
         run: npm ci
 
       - name: Run Tests
-        run: npm run teste:coverage
+        run: npm run test:coverage
 
       - name: Upload Coverage
         uses: actions/upload-artifact@v3
