--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint:check": "vue-cli-service lint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
+    "json-server": "^1.0.0-beta.1",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3"
   },
