--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "test:unit": "vue-cli-service test:unit",
     "test:coverage": "vue-cli-service test:unit --coverage --maxWorkers=20% --watchAll=false --logHeapUsage --cache",
     "lint": "vue-cli-service lint",
-    "lint:check": "vue-cli-service lint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix --ignore-path .gitignore"
+    "lint:check": "vue-cli-service lint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix --ignore-path .gitignore",
+    "server": "json-server --watch server/db.json"
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.4",
     "vue": "^3.2.13",
+    "vue-debounce": "^5.0.0",
+    "vue-progressive-image": "^4.0.0",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
@@ -30,12 +34,15 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.19",
     "babel-jest": "^27.0.6",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.0.5",
+    "postcss": "^8.4.40",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.4.7",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
   }
