--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "server": "json-server --watch server/db.json"
   },
   "dependencies": {
+    "@types/vuelidate": "^0.7.21",
+    "@vuelidate/core": "^2.0.3",
+    "@vuelidate/validators": "^2.0.4",
+    "@vuepic/vue-datepicker": "^9.0.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "json-server": "^0.17.4",
+    "luxon": "^3.4.4",
     "vue": "^3.2.13",
     "vue-debounce": "^5.0.0",
     "vue-progressive-image": "^4.0.0",
@@ -23,6 +28,7 @@
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^3.4.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
