--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "test:unit": "vue-cli-service test:unit",
+    "test": "vue-cli-service test:unit",
     "test:coverage": "vue-cli-service test:unit --coverage --maxWorkers=20% --watchAll=false --logHeapUsage --cache",
     "lint": "vue-cli-service lint",
     "lint:check": "vue-cli-service lint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --no-fix --ignore-path .gitignore",
     "server": "json-server --watch server/db.json"
   },
   "dependencies": {
+    "@pinia/testing": "^0.1.4",
     "@types/vuelidate": "^0.7.21",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
